<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <!-- FOTO DEL ALUMNO -->
        <ImageView
            android:id="@+id/imgAlumno"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/strAlumno"
            android:scaleType="centerCrop"
            android:src="@drawable/alumnos"
            android:padding="4dp"/>

        <!-- INFORMACIÓN PRINCIPAL -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strNombreAlumno"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strDomicilio"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="2dp"/>

            <TextView
                android:id="@+id/txtCarrera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strEspecialidad"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="2dp"/>

            <!-- MATRÍCULA -->
            <TextView
                android:id="@+id/txtMatricula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strMatricula"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>