<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".alumnoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/fondoAlumno">
        <!-- ===================== ENCABEZADO ===================== -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="16dp"
            >
            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strNombreAlumno"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/imgPerfil"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/lblMatricula"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/strMatricula"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@id/imgPerfil"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblNombre" />
            <TextView
                android:id="@+id/lblEspecialidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/strEspecialidad"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@id/imgPerfil"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblMatricula" />
            <ImageView
                android:id="@+id/imgPerfil"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="Foto"
                android:scaleType="centerCrop"
                android:src="@mipmap/estefania"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- ===================== FORMULARIO ===================== -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="18dp"

            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginBottom="50sp">
                <!-- FOTO Y QR -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_marginEnd="16dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp">

                        <ImageView
                            android:id="@+id/imgAlumno"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="6dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/alumnos" />

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp">

                        <ImageView
                            android:id="@+id/imgQR"

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/qr_code"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <!-- MATRÍCULA -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Matrícula"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtMatricula"
                            android:hint="Matricula"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBuscar"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/strBuscar"
                        app:icon="@drawable/ic_search" />

                </LinearLayout>
                <!-- NOMBRE -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="Nombre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- DOMICILIO -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="Domicilio">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDomicilio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress" />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- ESPECIALIDAD -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Especialidad"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spEspecialidad"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp" />

                <!-- BOTONES -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGuardar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/strGuardar"
                        app:icon="@drawable/ic_save" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLimpiar"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/strLimpiar"
                        app:icon="@drawable/ic_clean" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCerrar"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/strCerrar" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>